Add the functionality to seed the model and bind change event callback

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <title>Model Part 1 Test</title>
+    <title>Model Constructor Test</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="stylesheets/cars.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -16,6 +16,20 @@
         <dt>Model:</dt>
         <dd id="model"></dd>
       </dl>
+
+      <form action="" method="post">
+        <fieldset>
+          <dl>
+            <dt>Make:</dt>
+            <dd><input type="text" name="make" value="BMW" /></dd>
+          </dl>
+          <dl>
+            <dt>Model:</dt>
+            <dd><input type="text" name="model" value="328i" /></dd>
+          </dl>
+          <input type="submit" />
+        </fieldset>
+      </form>
     </main>
 
     <script src="javascripts/app.js"></script>
