Create view constructor and methods to render and remove view to constructor prototype

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <title>Collection Part 2 Test</title>
+    <title>View Part 1 Test</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="stylesheets/cars.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -31,19 +31,13 @@
     </main>
 
     <script id="cars" type="text/x-handlebars">
-      {{#each cars}}
-      <li>
-        <dl>
-          {{#with attributes}}
-          <dt>Make:</dt>
-          <dd>{{make}}</dd>
-          <dt>Model:</dt>
-          <dd>{{model}}</dd>
-          {{/with}}
-        </dl>
-        <a data-id="{{id}}" href="#">Remove</a>
-      </li>
-      {{/each}}
+      <dl>
+        <dt>Make:</dt>
+        <dd>{{make}}</dd>
+        <dt>Model:</dt>
+        <dd>{{model}}</dd>
+      </dl>
+      <a data-id="{{id}}" href="#">Remove</a>
     </script>
 
     <script src="javascripts/app.js"></script>
